--- a/APPLICATION/docker-compose.yaml
+++ b/APPLICATION/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - ./java/.env    
+      - ./APP/.env    
     depends_on:
       - mysql
     networks:
