--- a/APPLICATION/frontend/pom.xml
+++ b/APPLICATION/frontend/pom.xml
@@ -22,7 +22,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <jacoco.version>0.8.9</jacoco.version> <!-- upgraded from 0.8.7 -->
+        <jacoco.version>0.8.9</jacoco.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
@@ -34,39 +34,41 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-            <version>3.1.0.RELEASE</version> <!-- upgraded from 3.0.5.RELEASE -->
+            <version>3.1.0.RELEASE</version>
         </dependency>
 
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>3.4.9</version> <!-- upgraded from 2.7.15 -->
+            <version>3.4.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <version>3.4.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>3.0.0</version> <!-- upgraded from 2.7.15 -->
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.4.9</version> <!-- upgraded from 2.7.15 -->
+            <version>3.4.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.4.9</version>
         </dependency>
 
         <!-- H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.2.220</version> <!-- upgraded from 2.1.214 -->
+            <version>2.2.220</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -81,13 +83,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>3.4.10</version> <!-- upgraded from 2.7.15 -->
+            <version>3.4.10</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
-            <version>6.3.8</version> <!-- upgraded from 5.7.10 -->
+            <version>6.3.8</version>
             <scope>test</scope>
         </dependency>
 
@@ -159,6 +161,7 @@
     </distributionManagement>
 
 </project>
+
 
 
 
