--- a/APPLICATION/frontend/pom.xml
+++ b/APPLICATION/frontend/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.3.232</version>
+            <version>2.3.220</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -161,7 +161,35 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <!-- ✅ NEWLY ADDED: Secure dependency management block -->
+    <dependencyManagement>
+        <dependencies>
+            <!-- Override transitive vulnerable dependencies -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.5.19</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.18.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-core</artifactId>
+                <version>3.9.9</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
+
 
 
 
