--- a/APPLICATION/frontend/pom.xml
+++ b/APPLICATION/frontend/pom.xml
@@ -88,9 +88,9 @@
 
         <!-- Servlet API -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.1.0</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -181,7 +181,9 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
 </project>
+
 
 
 
