--- a/.github/workflows/ScanNWithsnyk.yml
+++ b/.github/workflows/ScanNWithsnyk.yml
@@ -33,17 +33,15 @@ jobs:
       - name: Install Snyk CLI
         run: npm install -g snyk
 
-      
-
       # Step 3: Build the Spring Boot project
       - name: Build Spring Boot project with Maven
         working-directory: APPLICATION/frontend
         run: mvn -B clean package -DskipTests
 
-      # Step 4: Run Snyk vulnerability scan
+      # Step 4: Run Snyk vulnerability scan (✅ always exit 0)
       - name: Run Snyk vulnerability scan
         working-directory: APPLICATION/frontend
-        run: snyk test --severity-threshold=medium --sarif-file-output=snyk.sarif
+        run: snyk test --severity-threshold=medium --sarif-file-output=snyk.sarif || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
@@ -52,6 +50,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: APPLICATION/frontend/snyk.sarif
+
 
 
 
