--- a/.github/workflows/DeploytoECR.yml
+++ b/.github/workflows/DeploytoECR.yml
@@ -52,8 +52,8 @@ jobs:
       # Step 6: Push Docker image to ECR
       - name: Push Docker image to Amazon ECR
         run: |
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker tag java-boardgame-webapp:$IMAGE_TAG $ECR_URI:$IMAGE_TAG
+          docker push $ECR_URI:$IMAGE_TAG
 
       # ✅ Step 7: Confirmation message
       - name: Deployment summary
