--- a/.github/workflows/DeploytoECR.yml
+++ b/.github/workflows/DeploytoECR.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Tag Docker image
         run: |
           ECR_URI=${{ steps.login-ecr.outputs.registry }}
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_URI/$ECR_REPOSITORY:$IMAGE_TAG
+           docker tag java-boardgame-webapp:$IMAGE_TAG $ECR_URI:$IMAGE_TAG
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
 
       # Step 6: Push Docker image to ECR
