--- a/.github/workflows/DeploytoECR.yml
+++ b/.github/workflows/DeploytoECR.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build Docker image
         working-directory: APPLICATION/frontend
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+            docker build -t java-boardgame-webapp:$IMAGE_TAG
 
       # Step 5: Tag Docker image for ECR
       - name: Tag Docker image
