--- a/.github/workflows/DeployTOKops8.yml
+++ b/.github/workflows/DeployTOKops8.yml
@@ -23,8 +23,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: |
-            frontend/*
-            backend/*
+            Terraform/*
           target: /home/${{ secrets.EC2_USER }}/app
 
       # Step 3: (Optional) Run remote commands after deployment
