--- a/.github/workflows/DeployTOKops8.yml
+++ b/.github/workflows/DeployTOKops8.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Copy Terraform folder to EC2
-      - name: Copy files to EC2
+      - name: Copy Terraform folder to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -25,7 +25,7 @@ jobs:
           source: Terraform/*
           target: /home/${{ secrets.EC2_USER }}/app
 
-      # Step 3: Run Terraform commands on EC2 with AWS credentials
+      # Step 3: Run Terraform on EC2 with AWS credentials
       - name: Run Terraform on EC2
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -34,8 +34,19 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/${{ secrets.EC2_USER }}/app/Terraform
+
+            # Export AWS credentials
             export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            export AWS_DEFAULT_REGION=us-east-1
+
+            # Run Terraform with variables for access keys
+            terraform init
+            terraform plan -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY"
+            terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY"
+
+            echo "Terraform deployment complete."
+
             
 
 
