--- a/Terraform/EKS/kubernetes_files/Deployment-service.yaml
+++ b/Terraform/EKS/kubernetes_files/Deployment-service.yaml
@@ -1,5 +1,5 @@
 #################################################
-# Java Application Deployment
+# Java Application Deployment with CSI Secrets
 #################################################
 apiVersion: apps/v1
 kind: Deployment
@@ -32,24 +32,11 @@ spec:
           ports:
             - containerPort: 8080
 
-          env:
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: java-app-secrets
-                  key: DB_USER
-
-            - name: DB_PASS
-              valueFrom:
-                secretKeyRef:
-                  name: java-app-secrets
-                  key: DB_PASS
-
-            - name: DB_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: java-app-config
-                  key: DB_HOST
+          # ✅ Mount secrets from AWS Secrets Manager via CSI Driver
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: "/mnt/secrets-store"
+              readOnly: true
 
           resources:
             requests:
@@ -76,6 +63,14 @@ spec:
             periodSeconds: 20
             timeoutSeconds: 5
             failureThreshold: 5
+
+      volumes:
+        - name: secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: "aws-java-app-secret-provider"
 
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
