--- a/Terraform/EKS/kubernetes_files/secret.yaml
+++ b/Terraform/EKS/kubernetes_files/secret.yaml
@@ -1,28 +1,10 @@
-apiVersion: secrets-store.csi.x-k8s.io/v1
-kind: SecretProviderClass
+apiVersion: v1
+kind: Secret
 metadata:
-  name: aws-java-app-secret-provider
-spec:
-  provider: aws
-  parameters:
-    objects: |
-      - objectName: "java-app"              # Your AWS Secrets Manager name
-        objectType: "secretsmanager"
-        jmesPath:
-          - path: "DB_USER"
-            objectAlias: "DB_USER"
-          - path: "DB_PASS"
-            objectAlias: "DB_PASS"
-          - path: "DB_NAME"
-            objectAlias: "DB_NAME"
-
-  secretObjects:
-    - secretName: java-app-secrets                # Kubernetes Secret name
-      type: Opaque
-      data:
-        - objectName: DB_USER
-          key: DB_USER
-        - objectName: DB_PASS
-          key: DB_PASS
-        - objectName: DB_NAME
-          key: DB_NAME
+  name: java-app-secrets
+  namespace: default
+type: Opaque
+data:
+  DB_USER: bXl1c2Vy         # base64 encoded value of "admin"
+  DB_PASS:  bXl1c2VycGFzc3dvcmQ= # base64 encoded value of "password123"
+  DB_NAME: SkFWQQ==     # base64 encoded value of "myappdb"
