--- a/Terraform/EKS/kubernetes_files/Deployment-service.yaml
+++ b/Terraform/EKS/kubernetes_files/Deployment-service.yaml
@@ -56,24 +56,27 @@ spec:
 
           readinessProbe:
             httpGet:
-              path: /actuator/health
+              path: /
               port: 8080
-            initialDelaySeconds: 15
+            initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
+            successThreshold: 1
             failureThreshold: 5
 
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /
               port: 8080
-            initialDelaySeconds: 30
+            initialDelaySeconds: 60
             periodSeconds: 20
             timeoutSeconds: 5
+            successThreshold: 1
             failureThreshold: 5
 
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
+
 
 
 ---
