--- a/Terraform/EKS/kubernetes_files/ingress.yaml
+++ b/Terraform/EKS/kubernetes_files/ingress.yaml
@@ -5,47 +5,22 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: alb
-
-    # --- ALB Configuration ---
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/load-balancer-name: php-app-alb
-    alb.ingress.kubernetes.io/group.name: production-alb-group
-
-    # --- Listener and SSL ---
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
-    alb.ingress.kubernetes.io/ssl-redirect: "443"
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:492457033740:certificate/406a762c-e5a9-482b-946d-48b512112a82
-    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06  # Strong modern TLS
-
-    # --- Health Check Configuration ---
-    alb.ingress.kubernetes.io/healthcheck-path: /
-    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
-    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
-    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
-    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
-    alb.ingress.kubernetes.io/success-codes: "200,302"
-
-    # --- Access & Performance ---
-    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
-    alb.ingress.kubernetes.io/idle-timeout: "60"
-    alb.ingress.kubernetes.io/load-balancer-attributes: "routing.http2.enabled=true,routing.http.drop_invalid_header_fields.enabled=true"
-
-    # --- Cross-Zone Balancing & Deregistration Delay ---
-    alb.ingress.kubernetes.io/target-group-attributes: "stickiness.enabled=false,deregistration_delay.timeout_seconds=30"
-    alb.ingress.kubernetes.io/cross-zone-load-balancing-enabled: "true"
-
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:920216467853:certificate/2d576d86-5fc3-4f85-b466-14c1e52f5b26
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
 spec:
   ingressClassName: alb
   rules:
-    - host: www.delightdavid.org.ng
+    - host: www.delightdavid.online
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: php-service
+                name: java-app-service
                 port:
                   number: 80
 
