--- a/Terraform/EKS/kubernetes_files/ingress.yaml
+++ b/Terraform/EKS/kubernetes_files/ingress.yaml
@@ -3,16 +3,20 @@ kind: Ingress
 metadata:
   name: java-app-ingress
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"         # Keep HTTPS redirect if needed
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"    # Correct backend protocol
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+      - delightdavid.online
+    secretName: java-app-tls    # cert-manager will create this secret
   rules:
   - host: delightdavid.online
     http:
       paths:
-      - path: /(.*)           # Match all paths and avoid rewrite issues
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: java-app-service
