--- a/APPLICATION/frontend/src/main/resources/application.properties
+++ b/APPLICATION/frontend/src/main/resources/application.properties
@@ -4,5 +4,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+
+
 # spring.datasource.initialization-mode=embedded
 spring.sql.init.mode=embedded
