--- a/Terraform/EKS/kubernetes_files/prometheus/value.yaml
+++ b/Terraform/EKS/kubernetes_files/prometheus/value.yaml
@@ -1,32 +1,10 @@
-# Prometheus values.yaml
-# Production-optimized config (works fine in Minikube too)
-server:
-  enabled: true
-  replicaCount: 1
-  service:
-    type: ClusterIP
-    port: 9090
-  persistentVolume:
-    enabled: false   # You can set this to true with PVC in production
-  resources:
-    requests:
-      cpu: 200m
-      memory: 256Mi
-    limits:
-      cpu: 500m
-      memory: 512Mi
-
-alertmanager:
-  enabled: false
-
-pushgateway:
-  enabled: false
-
 serverFiles:
   prometheus.yml:
     global:
       scrape_interval: 10s
+
     scrape_configs:
+      # 1️⃣ Kubernetes Pods (auto-discovered)
       - job_name: 'kubernetes-pods'
         kubernetes_sd_configs:
           - role: pod
@@ -44,7 +22,13 @@ serverFiles:
             replacement: $1:$2
             target_label: __address__
 
+      # 2️⃣ Java Spring Boot App (Actuator Prometheus endpoint)
       - job_name: 'java-app'
         metrics_path: /actuator/prometheus
         static_configs:
-          - targets: ['java-app-service.default.svc.cluster.local:8080']
+          - targets: ['java-app-service.default.svc.cluster.local:9090']
+
+      # 3️⃣ Node Exporter (EC2 host monitoring)
+      - job_name: 'node_exporter'
+        static_configs:
+          - targets: ['3.84.102.38:9100']
