--- a/Terraform/EKS/kubernetes_files/Deployment-service.yaml
+++ b/Terraform/EKS/kubernetes_files/Deployment-service.yaml
@@ -39,6 +39,13 @@ spec:
                   name: java-app-secrets
                   key: DB_PASS
 
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: java-app-secrets
+                  key: DB_NAME
+      
+
             - name: DB_HOST
               valueFrom:
                 configMapKeyRef:
